<resources>
    <string name="app_name">Inventory Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_Msg">Welcome to Inventory Management System</string>
    <string name="email_phno_hint">Enter your email or phone</string>
    <string name="password_hint">Enter your password</string>
    <string name="fullName_hint">Enter your full name</string>
    <string name="businessName_hint">Enter your business name</string>
    <string name="phno_hiny">Enter your phone number</string>
    <string name="email_hint">Enter your email</string>
    <string name="create_a_password_hint">Create a password</string>
</resources>